# tmp-ci-cd-demo

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  cloudbuild.yaml  cloudbuild_new.yaml  gradle.properties  index.html  settings.gradle
.github/workflows/: cd.yml  ci-2.yml  ci.yml  manual-cd.yml
helm/getting-started/: Chart.yaml  values.yaml
helm/getting-started/env/: values-kub-ent-dev.yaml  values-kub-ent-sbx.yaml
helm/gitlab/: config.yaml
helm/hest/: values.yaml
helm/hest-er-best/: Chart.yaml  values.yaml
helm/hest-er-best/charts/common/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  values-ci-tests.yaml  values.yaml
helm/hest-er-best/charts/common/templates/: _helpers.tpl  configmap.yaml  cron.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secrets.yaml  service.yaml  serviceAccount.yaml  vpa.yaml
helm/hest-er-best/env/: values-prd.yaml
helm/hest/charts/: common-1.17.3.tgz
helm/hest/env/: values-kub-ent-dev.yaml
src/: README.md  bucket.rs  cache.rs  error.rs  health.rs  main.rs
src/main/kotlin/org/entur/platform/examples/service/: ServiceApplication.kt
src/main/kotlin/org/entur/platform/examples/service/greet/: Greeting.kt  HelloWorldController.kt
src/test/kotlin/org/entur/platform/examples/service/: ServiceApplicationTests.kt
src/test/kotlin/org/entur/platform/examples/service/actuator/: ActuatorTests.kt
src/tests/: mod.rs
terraform/: backend.tf  main.tf  rocket.txt  variables.tf  versions.tf
terraform/env/: kub-ent-dev.tfvars  kub-ent-sbx.tfvars
(+1 files in other folders)
