[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rocket"
path = "src/main.rs"

[dependencies]
google-cloud-default = { version = "0.4.0", features = ["storage"] }
google-cloud-storage = "0.13.0"
tokio = { version = "1.31.0", features = ["full"] }
warp = "0.3.5"
#https://docs.rs/openssl/latest/openssl/#vendored
openssl = { version = "0.10", features = ["vendored"] }
google-cloud-metadata = "0.3.2"
thiserror = "1.0.44"
serde = "1.0.183"
serde_json = "1.0.104"
async-trait = "0.1.73"
parking_lot = "0.12.1"

[dev-dependencies]
wiremock = "0.5.19"
serial_test = "2.0.0"

# reduce size of the image - even more
[profile.release]
lto = true
codegen-units = 1
